--- a/index.html
+++ b/index.html
@@ -26,11 +26,53 @@
       <div class="cover-left">
         <h1 class="main-text">A Beginner's Guide to Norse Mythology</h1>
         <p class="sub-text">Interested in Norse mythology and don’t know where to start? We’ve got you covered! Here’s everything you need to know about the basics of Norse mythology.</p>
-        <button class="signup">Sign up</button>
+        <button class="signup">Enter Valhalla</button>
       </div>
       <div class="cover-right">
         <img src="./img/thor-fighting-giants.jpeg" alt="Scandinavian Gods">
       </div>
     </div>
   </div>
+
+  <div class="gods-container">
+    <h2>Norse Gods</h2>
+    <div class="gods-block">
+      <div class="one-god">
+        <div class="god"></div>
+        <p>Odin</p>
+      </div>
+      <div class="one-god">
+        <div class="god"></div>
+        <p>Thor</p>
+      </div>
+      <div class="one-god">
+        <div class="god"></div>
+        <p>Freya</p>
+      </div>
+      <div class="one-god">
+        <div class="god"></div>
+        <p>Loki</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="quote-container">
+    <div class="quote-block">
+      <p class="quote">"I have sacrificed much to achieve peace. So too must a new generation sacrifice to maintain that peace. Responsibility! Duty! Honour! These are not mere virtues to which we must aspire! They are essential to every soldier, to every king!"</p>
+      <p class="author">  - Odin, 'Thor', 2011.</p>
+    </div>
+  </div>
+
+  <div class="call-to-container">
+    <div class="blue-container">
+      <div class="text-in">
+        <h3>Call to action! It's time!</h3>
+        <p>Let's go</p>
+      </div>
+      <button class="signup">Sign up</button>
+    </div>
+  </div>
+
+  <div class="footer">Odin</div>
+
 </body>
