--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>Freya</p>
       </div>
       <div class="one-god">
-        <img src="./img/idunn.jpg" alt="Idunn">
+        <img src="./img/idun.jpg" alt="Idunn">
         <p>Idunn</p>
       </div>
     </div>
